complete database context and migration

--- a/UNITOFWORK/appsettings.json
+++ b/UNITOFWORK/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectDB": "server=.;database=UnitOfWorkDemo;uid=sa;pwd=1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
